# libxtrans

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  README  Xtrans.c  Xtrans.h  Xtransdnet.c  Xtransint.h  Xtranslcl.c  Xtransos2.c  Xtranssock.c  Xtranstli.c  Xtransutil.c  autogen.sh  configure.ac  transport.c  xtrans.m4  xtrans.pc.in
doc/: .gitignore  Makefile.am  xtrans.xml
