Xtransincludedir = $(libdir)/X11/Xtrans
Xtransinclude_HEADERS = \
	Xtrans.h \
	Xtrans.c \
	Xtransdef.h \
	Xtransdnet.c \
	Xtransint.h \
	Xtranslcl.c \
	Xtransos2.c \
	Xtranssock.c \
	Xtranstli.c \
	Xtransutil.c \
	transport.c

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = xtrans.pc

EXTRA_DIST = xtrans.pc.in
